--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -24,7 +24,7 @@
  </section>
  <!-- Pie de pagina -->
  <footer>
- (c) Aspectos Juridicos
+ (c) Evolución y Mantenimiento Software
  </footer>
 </body>
 </html> 
