--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -21,6 +21,8 @@
  <section>
  <b>Películas</b>
  <p>(Contenido)</p>
+ <b>Película 1</b>
+ <p>Contenido 1</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
